jumping dots fixed, set 5 images

--- a/carousel_ver_2/src/styles.css
+++ b/carousel_ver_2/src/styles.css
@@ -19,12 +19,12 @@ body {
 
 /* CAROUSEL STYLE */
 .js-Carousel {
-  background-color: var(--clr-carousel-container);
+  /* background-color: var(--clr-carousel-container); */
   height: 500px;
   margin: 0 auto 2em;
   overflow: hidden;
   position: relative;
-  width: 600px;
+  width: 800px;
 }
 .js-Carousel > ul {
   height: 500px;
@@ -40,7 +40,7 @@ body {
   /* border: 5px solid yellow; */
 }
 .js-Carousel > ul li img {
-  width: 600px;
+  width: 160px;
   height: 500px;
   /* min-height: 100%; */
   object-fit: cover;
